--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "bootstrap": "4.3.1",
+    "echarts": "^4.7.0",
     "element-ui": "2.7.2",
     "jquery": "^3.4.1",
     "js-cookie": "2.2.0",
@@ -26,6 +27,7 @@
     "qs": "^6.9.0",
     "vue": "2.6.10",
     "vue-axios": "2.1.5",
+    "vue-count-to": "^1.0.13",
     "vue-datatables-net": "1.2.4",
     "vue-router": "3.0.6",
     "vue2-datatable-component": "2.3.1",
