--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "bootstrap": "4.3.1",
+    "driver.js": "^0.9.8",
     "echarts": "^4.7.0",
     "element-ui": "2.7.2",
     "jquery": "^3.4.1",
@@ -24,6 +25,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "popper.js": "^1.16.1",
     "qs": "^6.9.0",
     "vue": "2.6.10",
     "vue-axios": "2.1.5",
@@ -51,7 +53,7 @@
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.0",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
