--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "qs": "^6.9.0",
     "vue": "2.6.10",
     "vue-axios": "2.1.5",
+    "vue-clipboard2": "^0.3.1",
     "vue-count-to": "^1.0.13",
     "vue-datatables-net": "1.2.4",
     "vue-router": "3.0.6",
